added new right background image

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 <body>
     <div class="outer">
         <div class="sidebar">
-            <div class="wrapper"><span class="outertext">Odin Library</span></div>
+            <div class="wrapper"><span class="outertextL">Odin Library</span></div>
         </div>
-        <div class="library"><span class="outertext">Books</span></div>
+        <div class="library">
+            <div class="wrapper"><span class="outertextR">Books</span></div>
+        </div>
     </div>
     <script src="./app.js"></script>
 </body>
