--- a/index.html
+++ b/index.html
@@ -14,10 +14,28 @@
 <body>
     <div class="outer">
         <div class="sidebar">
-            <div class="wrapper"><span class="outertextL">Odin Library</span></div>
+            <div class="wrapperL"><span class="outertextL">Odin Library</span><button class="newBookBtn btn">Add a New
+                    Book</button></div>
+            <form class="newBook" novalidate>
+                <div class="title"><label for="title">Title*</label><br><input type="text" name="title" id="title"
+                        placeholder="War and Peace" minlength="2" maxlength="20" required></div>
+                <div class="author"><label for="author">Author*</label><br><input type="text" name="author" id="author"
+                        placeholder="Leo Tolstoy" minlength="2" maxlength="20" required></div>
+                <div class="pages"><label for="pages">Pages*</label><br><input type="text" name="pages" id="pages"
+                        placeholder="864" required>
+                </div>
+                <div class="read"><label for="read">Read? Y/N*</label><br><select name="read" id="read" required>
+                        <option value="Yes">Yes</option>
+                        <option value="No">No</option>
+                    </select>
+                </div>
+                <button type="submit" class="submitButton btn">Add To Library</button>
+            </form>
         </div>
         <div class="library">
-            <div class="wrapper"><span class="outertextR">Books</span></div>
+            <div class="wrapperR"><span class="outertextR">Books</span>
+            </div>
+            <div class="content" id="content"></div>
         </div>
     </div>
     <script src="./app.js"></script>
